src/objects/Valores_RGA__mdt.object
<CustomObject>
    <description>Valores de las tablas de RGA que deberán de almacenarse en CRM para poder hacer las conversiones necesarias</description>
    <fields>
        <fullName>RGA_Causa_Queja_y_Reclamacion__c</fullName>
        <label>Causa Queja y Reclamación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No asignación de Cita</fullName>
                    <default>true</default>
                    <label>No asignación de Cita</label>
                </value>
                <value>
                    <fullName>Incumplimiento de Cita</fullName>
                </value>
                <value>
                    <fullName>Demora o incumplimiento de Visita</fullName>
                </value>
                <value>
                    <fullName>Demora Inicio en la Reparación</fullName>
                </value>
                <value>
                    <fullName>En ejecución de la Reparación</fullName>
                </value>
                <value>
                    <fullName>No Finalización de reparación (Demora fin trabajos, incumplimiento de plazos)</fullName>
                </value>
                <value>
                    <fullName>Resultado de la Reparación. Mala Calidad trabajos ejecutados</fullName>
                </value>
                <value>
                    <fullName>Disconformidad con Resultado Peritación</fullName>
                </value>
                <value>
                    <fullName>Información o aclaración de un expediente (desinformación)</fullName>
                </value>
                <value>
                    <fullName>Disconformidad con Rechazo</fullName>
                </value>
                <value>
                    <fullName>Incumplimiento compromiso ORO</fullName>
                </value>
                <value>
                    <fullName>Compromiso oro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RGA_Evento__c</fullName>
        <label>Evento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 Rechazo Total</fullName>
                    <default>true</default>
                    <label>01 Rechazo Total</label>
                </value>
                <value>
                    <fullName>02 Con reparación</fullName>
                </value>
                <value>
                    <fullName>03 Mixto</fullName>
                </value>
                <value>
                    <fullName>04 Indemnizable</fullName>
                </value>
                <value>
                    <fullName>05 Reapertura</fullName>
                </value>
                <value>
                    <fullName>06 Asignación de cita</fullName>
                </value>
                <value>
                    <fullName>07 Cita Cerrada</fullName>
                </value>
                <value>
                    <fullName>08 Vista reparación</fullName>
                </value>
                <value>
                    <fullName>09 Primera cita cancelada</fullName>
                </value>
                <value>
                    <fullName>10 Cita Replanificada</fullName>
                </value>
                <value>
                    <fullName>11 Visita Replanificada</fullName>
                </value>
                <value>
                    <fullName>12 Asignación Pericial</fullName>
                </value>
                <value>
                    <fullName>13 Recepción Inf. Pericial</fullName>
                </value>
                <value>
                    <fullName>14 Apertura de la Queja y Reclamación</fullName>
                </value>
                <value>
                    <fullName>15 Propuesta de solución al Asegurado</fullName>
                </value>
                <value>
                    <fullName>16 Cierre de la Queja y Reclamación</fullName>
                </value>
                <value>
                    <fullName>17 Finalización técnica del expediente</fullName>
                </value>
                <value>
                    <fullName>18 Rechazo Identificado Total</fullName>
                </value>
                <value>
                    <fullName>19 Rechazo Comunicado Total</fullName>
                </value>
                <value>
                    <fullName>20 Solicitud compromiso ORO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RGA_Momento__c</fullName>
        <description>Momento en el que se encuentra el siniestro</description>
        <label>Momento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apertura</fullName>
                    <default>true</default>
                    <label>Apertura</label>
                </value>
                <value>
                    <fullName>Valoración</fullName>
                </value>
                <value>
                    <fullName>Reparación</fullName>
                </value>
                <value>
                    <fullName>Indemnización</fullName>
                </value>
                <value>
                    <fullName>Rechazo</fullName>
                </value>
                <value>
                    <fullName>Cierre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RGA_Motivo__c</fullName>
        <description>Breve justificación de la reapertura</description>
        <label>Motivo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trabajos pendientes de finalización</fullName>
                    <default>true</default>
                    <label>Trabajos pendientes de finalización</label>
                </value>
                <value>
                    <fullName>Disconformidad con trabajos efectuados</fullName>
                </value>
                <value>
                    <fullName>Reclamación de Daños no contemplados por Empresa de Asistencia</fullName>
                </value>
                <value>
                    <fullName>Disconformidad con Rechazo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RGA_Motivos_de_Rechazo__c</fullName>
        <label>Motivos de Rechazo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DIRECC.DISTINTA</fullName>
                    <default>true</default>
                    <label>DIRECC.DISTINTA</label>
                </value>
                <value>
                    <fullName>GAR.NO CUBIERTA</fullName>
                </value>
                <value>
                    <fullName>CLAUSULA EXLUSION</fullName>
                </value>
                <value>
                    <fullName>RIESGO NO CUBIERTO</fullName>
                </value>
                <value>
                    <fullName>POLIZA ANULADA</fullName>
                </value>
                <value>
                    <fullName>POLIZA NO CORRESPOND</fullName>
                </value>
                <value>
                    <fullName>FRANQUIC.NEG.O CERO</fullName>
                </value>
                <value>
                    <fullName>STRO.CONSORCIABLE</fullName>
                </value>
                <value>
                    <fullName>STRO.ANTER.F.EFECTO</fullName>
                </value>
                <value>
                    <fullName>STRO.POSTE.F.VENCIMT</fullName>
                </value>
                <value>
                    <fullName>RC NO IMPUTABLE ASEG</fullName>
                </value>
                <value>
                    <fullName>VIVIENDA EN OBRAS</fullName>
                </value>
                <value>
                    <fullName>NO CONTINENTE</fullName>
                </value>
                <value>
                    <fullName>NO CONTENIDO</fullName>
                </value>
                <value>
                    <fullName>EXCLUS.HURTO FUERA</fullName>
                </value>
                <value>
                    <fullName>VIENTO NO ANORMAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RGA_Resultado_del_Siniestro__c</fullName>
        <label>Resultado del Siniestro</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indemnizable</fullName>
                    <default>true</default>
                    <label>Indemnizable</label>
                </value>
                <value>
                    <fullName>Reparable</fullName>
                </value>
                <value>
                    <fullName>Mixto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RGA_SEL_Clasificador__c</fullName>
        <description>Tipos de clasificadores para poder organizar RGA la información que le llega de cada movimiento de información desde el CRM.</description>
        <label>Clasificador</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTOS VANDALICOS</fullName>
                </value>
                <value>
                    <fullName>AGUA PROPIOS</fullName>
                </value>
                <value>
                    <fullName>AGUA PROPIOS Y TERCEROS</fullName>
                </value>
                <value>
                    <fullName>ALIMENTOS CONGELADOS</fullName>
                </value>
                <value>
                    <fullName>ATRACO</fullName>
                </value>
                <value>
                    <fullName>CAIDA DE RAYO / DAÑOS ELECTRICOS</fullName>
                </value>
                <value>
                    <fullName>CRISTALES</fullName>
                </value>
                <value>
                    <fullName>DAÑOS A BIENES REFRIGERADOS</fullName>
                </value>
                <value>
                    <fullName>DAÑOS POR HUMO</fullName>
                </value>
                <value>
                    <fullName>FENOMENOS NATURALEZA</fullName>
                </value>
                <value>
                    <fullName>IMPACTO DE VEHICULOS</fullName>
                </value>
                <value>
                    <fullName>INCENDIO</fullName>
                </value>
                <value>
                    <fullName>INUNDACION</fullName>
                </value>
                <value>
                    <fullName>R.C. CONTENIDO</fullName>
                </value>
                <value>
                    <fullName>R.C. CONTINENTE</fullName>
                </value>
                <value>
                    <fullName>R.C. EXPLOTACION</fullName>
                </value>
                <value>
                    <fullName>R.C. PATRONAL</fullName>
                </value>
                <value>
                    <fullName>R.C. PRODUCTOS</fullName>
                </value>
                <value>
                    <fullName>RECLAMACION DE DAÑOS</fullName>
                </value>
                <value>
                    <fullName>RIESGO NO CUBIERTO</fullName>
                </value>
                <value>
                    <fullName>TODO RIESGO ACCIDENTAL</fullName>
                </value>
                <value>
                    <fullName>ROBO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RGA_Tipo_Cita__c</fullName>
        <label>Tipo Cita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Propuesta por empresa de asistencia</fullName>
                    <default>true</default>
                    <label>Propuesta por empresa de asistencia</label>
                </value>
                <value>
                    <fullName>Propuesta por el asegurado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RGA_Tipo_de_Visita__c</fullName>
        <label>Tipo de Visita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Resto Visitas</fullName>
                    <default>true</default>
                    <label>Resto Visitas</label>
                </value>
                <value>
                    <fullName>Última Visita</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RGA_Tipos_Accion_Pratus__c</fullName>
        <label>Tipos Acción RGA Pratus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actualización de información del siniestro</fullName>
                    <default>true</default>
                    <label>Actualización de información del siniestro</label>
                </value>
                <value>
                    <fullName>Inicio de la reparación</fullName>
                </value>
                <value>
                    <fullName>Finalización de la reparación (Finalización Técnica)</fullName>
                </value>
                <value>
                    <fullName>Reapertura de la reparación</fullName>
                </value>
                <value>
                    <fullName>Solicitud de presupuesto de reparación</fullName>
                </value>
                <value>
                    <fullName>Observaciones al siniestro</fullName>
                </value>
                <value>
                    <fullName>Encargo de peritación</fullName>
                </value>
                <value>
                    <fullName>Rechazo en confirmación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Valor RGA</label>
    <pluralLabel>Valores RGA</pluralLabel>
</CustomObject>